# sidebar

./: .gitignore  Cargo.toml  README.md  config.json  config.yaml  memo.md
src/: app.rs  color.rs  command.rs  config.rs  cursor_control.rs  error.rs  file_icon.rs  icon.rs  main.rs  node.rs  node_map.rs  shell_command.rs  shell_commands.rs  text_line.rs  utils.rs  viewer.rs
