[package]
name = "sidebar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.19", features = ["derive"] }
colored = "1.9"
crossterm = "0.27.0"
dir = "0.1.2"
duct = "0.13.7"
log = "0.4.25"
path-absolutize = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.131"
simplelog = "0.12.2"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }
walkdir = "2.5.0"
