[package]
name = "sidebar"
version = "0.2.0"
edition = "2021"
description = "A simple TUI file explorer."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.27.0"
dir = "0.1.2"
duct = "0.13.7"
fs_extra = "1.3.0"
globset = "0.4.15"
log = "0.4.25"
path-absolutize = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }
